--- a/src/main/webapp/css/news-center.css
+++ b/src/main/webapp/css/news-center.css
@@ -174,6 +174,8 @@ a:hover, a:focus,a {
 .gongneng-icon .icon-coffee {
     font-size: 50px;
     color: #ccc;
+}.gongneng-icon .ON {
+    color: green;
 }
 .qita-xiaofei-guanli h4 {
     height: 45px;
