Bug 1549 籽  手动下单成功，点击“确定”后，应该返回房态数量页面

--- a/fanqie-toms/trunk/src/main/webapp/css/news-center.css
+++ b/fanqie-toms/trunk/src/main/webapp/css/news-center.css
@@ -161,6 +161,9 @@ a:hover, a:focus,a {
 .remove-room-type:hover {
     color: #fff;
 }
+.selectRoomType {
+    width: 180px;
+}
 /*个性化设置*/
 .manual-order h4,
 .qita-xiaofei-guanli h4 {
