Bug 1586  籽   修改其他消费项目样式  Bug 1554 籽 手动下单，应该能填多个其他消费项目

--- a/fanqie-toms/trunk/src/main/webapp/css/news-center.css
+++ b/fanqie-toms/trunk/src/main/webapp/css/news-center.css
@@ -164,6 +164,12 @@ a:hover, a:focus,a {
 .selectRoomType {
     width: 180px;
 }
+.other-pay-number,#otherList .number {
+    width: 100px;
+}
+.select-other-pay {
+    margin: 5px 0;
+}
 /*个性化设置*/
 .manual-order h4,
 .qita-xiaofei-guanli h4 {
