--- a/src/main/webapp/css/news-center.css
+++ b/src/main/webapp/css/news-center.css
@@ -8,12 +8,12 @@ body,.main-content {
 .form-actions {
     margin: 0;
 }
-body {
+/*body {
     -webkit-user-select: none;
     -moz-user-select: none;
     -khtml-user-select: none;
     -ms-user-select: none;
-}
+}*/
 h1, h2, h3,h4, h5, h6,p {
     text-align:left;
 }
